--- a/TEST WEBSITE/styles.css
+++ b/TEST WEBSITE/styles.css
@@ -8,12 +8,12 @@ body {
 .container {
     max-width: 600px;
     margin: 0 auto;
-    position: relative; /* Ensure positioning works */
+    position: relative;
 }
 
 .title {
     font-size: 24px;
-    color: #ff69b4; /* pastel pink */
+    color: #ff69b4;
 }
 
 .flower-selection, #emotion-section {
@@ -31,20 +31,17 @@ body {
     margin: 10px;
     padding: 10px;
     cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center the content horizontally */
     transition: transform 0.3s;
 }
 
 .flower-button img {
-    width: 200px; /* Increase the size of the flower images */
+    width: 200px;
     height: 200px;
     border-radius: 10px;
 }
 
 .flower-button p {
-    margin: 10px 0 0 0; /* Adjust spacing for the flower names */
+    margin: 10px 0 0 0;
 }
 
 .flower-button:hover, .emotion-button:hover {
@@ -52,7 +49,7 @@ body {
 }
 
 #selected-flower {
-    width: 300px; /* Increase the size of the selected flower */
+    width: 300px;
     height: 300px;
     margin: 20px auto;
 }
