--- a/TEST WEBSITE/styles.css
+++ b/TEST WEBSITE/styles.css
@@ -1,3 +1,4 @@
+/* Your CSS styles */
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -61,26 +62,19 @@ body {
 
 .design-images {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: -1;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .design-images img {
-    width: 25%;
+    width: 100px;
     height: auto;
-    position: absolute;
+    margin: 10px;
 }
 
-.top-left {
-    top: 0;
-    left: 0;
-}
-
-.bottom-right {
-    bottom: 0;
-    right: 0;
+.cute-pic {
+    width: 100px;
+    height: auto;
+    margin: 10px;
 }
