--- a/TEST WEBSITE/styles.css
+++ b/TEST WEBSITE/styles.css
@@ -1,4 +1,5 @@
-/* Your CSS styles */
+/* styles.css */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -75,4 +76,9 @@ body {
 .design-images .cute-pic {
     width: 100px;
     height: auto;
+}
+
+.design-images .cute-pic:nth-child(1),
+.design-images .cute-pic:nth-child(2) {
+    width: 150px;
 }
