--- a/TEST WEBSITE/styles.css
+++ b/TEST WEBSITE/styles.css
@@ -80,7 +80,7 @@ body {
 }
 
 #result-section .design-images .cute-pic {
-    width: 50px;
+    width: 150px; /* Adjust the width to make the cute pics larger */
     height: auto;
     position: absolute;
     top: 50%;
@@ -88,9 +88,9 @@ body {
 }
 
 #result-section .design-images .cute-pic:first-child {
-    left: calc(50% - 150px);
+    left: calc(50% - 250px); /* Adjust the position of the first cute pic */
 }
 
 #result-section .design-images .cute-pic:last-child {
-    right: calc(50% - 150px);
+    right: calc(50% - 250px); /* Adjust the position of the second cute pic */
 }
