--- a/TEST WEBSITE/styles.css
+++ b/TEST WEBSITE/styles.css
@@ -1,3 +1,4 @@
+/* Your CSS styles */
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -50,7 +51,7 @@ body {
     transform: scale(1.1);
 }
 
-#result-image {
+#selected-flower {
     width: 300px;
     height: 300px;
     margin: 20px auto;
@@ -62,36 +63,34 @@ body {
 }
 
 .design-images {
-    position: relative;
-    margin-top: 20px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* Make sure the images don't interfere with other elements */
 }
 
 .design-images .cute-pic {
+    position: absolute;
     width: 100px;
     height: auto;
-    position: absolute;
 }
 
 .design-images .cute-pic:nth-child(1) {
-    top: -60px;
-    left: 50%;
-    transform: translateX(-50%);
+    bottom: 10%;
+    right: 10%;
 }
 
 .design-images .cute-pic:nth-child(2) {
-    top: 50%;
-    right: -60px;
-    transform: translateY(-50%);
+    bottom: 10%;
+    left: 10%;
 }
 
 .design-images .cute-pic:nth-child(3) {
-    bottom: -60px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 10%;
+    right: 10%;
 }
 
 .design-images .cute-pic:nth-child(4) {
-    top: 50%;
-    left: -60px;
-    transform: translateY(-50%);
+    top: 10%;
+    left: 10%;
 }
