--- a/TEST WEBSITE/styles.css
+++ b/TEST WEBSITE/styles.css
@@ -76,21 +76,21 @@ body {
 }
 
 .design-images .cute-pic:nth-child(1) {
-    top: 60%;
+    bottom: 40%;
     right: 10%;
 }
 
 .design-images .cute-pic:nth-child(2) {
-    top: 60%;
+    bottom: 40%;
     left: 10%;
 }
 
 .design-images .cute-pic:nth-child(3) {
-    top: 15%;
+    top: 20%;
     right: 10%;
 }
 
 .design-images .cute-pic:nth-child(4) {
-    top: 15%;
+    top: 20%;
     left: 10%;
 }
