--- a/TEST WEBSITE/styles.css
+++ b/TEST WEBSITE/styles.css
@@ -1,4 +1,3 @@
-/* Your CSS styles */
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -51,7 +50,7 @@ body {
     transform: scale(1.1);
 }
 
-#selected-flower {
+#result-image {
     width: 300px;
     height: 300px;
     margin: 20px auto;
@@ -63,34 +62,36 @@ body {
 }
 
 .design-images {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    pointer-events: none; /* Make sure the images don't interfere with other elements */
+    position: relative;
+    margin-top: 20px;
 }
 
 .design-images .cute-pic {
-    position: absolute;
     width: 100px;
     height: auto;
+    position: absolute;
 }
 
 .design-images .cute-pic:nth-child(1) {
-    top: 10%;
-    left: 10%;
+    top: -60px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .design-images .cute-pic:nth-child(2) {
-    bottom: 10%;
-    left: 10%;
+    top: 50%;
+    right: -60px;
+    transform: translateY(-50%);
 }
 
 .design-images .cute-pic:nth-child(3) {
-    top: 10%;
-    right: 10%;
+    bottom: -60px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .design-images .cute-pic:nth-child(4) {
-    bottom: 10%;
-    right: 10%;
+    top: 50%;
+    left: -60px;
+    transform: translateY(-50%);
 }
