--- a/TEST WEBSITE/styles.css
+++ b/TEST WEBSITE/styles.css
@@ -73,25 +73,25 @@ body {
 }
 
 .design-images .cute-pic:nth-child(1) {
-    top: -60px;
-    left: 50%;
+    top: 100%;
+    right: -50px;
     transform: translateX(-50%);
 }
 
 .design-images .cute-pic:nth-child(2) {
     top: 50%;
-    right: -60px;
+    right: -55px;
     transform: translateY(-50%);
 }
 
 .design-images .cute-pic:nth-child(3) {
-    bottom: -60px;
-    left: 50%;
+    bottom: 100%;
+    left: -50px;
     transform: translateX(-50%);
 }
 
 .design-images .cute-pic:nth-child(4) {
-    top: 50%;
-    left: -60px;
+    top: 53%;
+    left: -50px;
     transform: translateY(-50%);
 }
